<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="com.example.tube.ui.map.MapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.example.tube.common.widget.DaumMapView
            android:id="@+id/map_daum_map"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:bindMarker="@{model.items}"
            app:bindChangeCenterPoint="@{model.centerPoint}"
            app:bindMapEventCallback="@{model.mapCallback}"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/map_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map_daum_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/map_btn_more"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:bindAdapter="@{model.adapter}"
            app:bindItems="@{model.items}"
            app:bindItemDecoration="@{model.itemDecoration}"
            />

<!--        새로고침-->

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp14"
            android:text="@string/map_refresh"
            android:background="@drawable/selector_chip_background"
            android:padding="@dimen/dp14"
            tools:text="새로고침"
            android:onClick="@{() -> model.command(model.ITN_REFRESH)}"
            android:visibility="@{model.viewRefresh}"
            />

<!--        카테고리-->

        <RadioGroup
            android:id="@+id/map_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/map_daum_map"
            android:layout_margin="@dimen/dp15"
            android:checkedButton="@+id/map_category_hospital"
            app:bindCheckedChangeListener="@{model.checkedListener}"
            >

            <RadioButton
                android:id="@+id/map_category_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_hospital"
                android:padding="@dimen/dp10"
                android:background="@drawable/selector_checked_background"
                android:button="@null"
                />

            <RadioButton
                android:id="@+id/map_category_pharmacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_pharmacy"
                android:padding="@dimen/dp10"
                android:background="@drawable/selector_checked_background"
                android:button="@null"
                />

            <RadioButton
                android:id="@+id/map_category_gas_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_gas_station"
                android:padding="@dimen/dp10"
                android:background="@drawable/selector_checked_background"
                android:button="@null"
                />

        </RadioGroup>

<!--        더보기-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/map_btn_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/map_more"
            android:padding="@dimen/dp10"
            android:gravity="center"
            tools:text="더 보기"
            android:background="?selectableItemBackground"
            android:onClick="@{() -> model.command(model.ITN_MORE)}"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true"
            android:visibility="@{model.viewProgress}"
            android:background="#7fefefef"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
